--- a/mythos/pom.xml
+++ b/mythos/pom.xml
@@ -13,4 +13,23 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+
+
+    <dependencies>
+
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-fips</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+
+    
+
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bc-fips</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
+    </dependencies>
 </project>
