--- a/mythos/pom.xml
+++ b/mythos/pom.xml
@@ -19,6 +19,13 @@
 
         <dependency>
             <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk18on</artifactId>
+            <version>1.79</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-fips</artifactId>
             <version>2.0.7</version>
         </dependency>
